--- a/_posts/2017-03-14-Bianfeng.md
+++ b/_posts/2017-03-14-Bianfeng.md
@@ -36,7 +36,7 @@ Core team:
 
 ## Customer profile ##
 
-Established in 1999，[BianFeng](http://www.bianfeng.com/) came from two leading card-game companies in China: GameABC and GameTea. In 2013, it was acquired by Zhejiang Daily Media Group for ¥3.2 billion. From then on, BianFeng began to expend its business, which covers not only card games but also online chess and E-sports platforms, board games, web games, wireless terminals, and other interactive entertainment content and services. BianFeng won the title of "Top 10 China brand game enterprise" at the 2016 China Game Industry Annual Conference with revenue of more than ¥400 million from more than 10 million monthly active users (MAU).
+Established in 1999， [BianFeng](http://www.bianfeng.com/) came from two leading card-game companies in China: GameABC and GameTea. In 2013, it was acquired by Zhejiang Daily Media Group for ¥3.2 billion. From then on, BianFeng began to expend its business, which covers not only card games but also online chess and E-sports platforms, board games, web games, wireless terminals, and other interactive entertainment content and services. BianFeng won the title of "Top 10 China brand game enterprise" at the 2016 China Game Industry Annual Conference with revenue of more than ¥400 million from more than 10 million monthly active users (MAU).
 
 Tales of Wuxia is a client offline game that comes from a famous series and combines role cultivation and RPG-style play. It tells the story of an ambitious young man who travels from afar to Luoyang to show admiration and respect for Master Shrimp. The Win32 version has been available on Steam ([侠客风云传 Tale of Wuxia](http://store.steampowered.com/app/377530/)) for 10 months with more than 40,000 downloads. BianFeng plans a large website promotion for the Windows 10 version.
 
@@ -44,7 +44,7 @@ Tales of Wuxia is a client offline game that comes from a famous series and comb
 
 BianFeng sees the Windows Store as a new distribution channel that they can use to attract more gamers and as a new chance for their desktop games, like Wuxia, to attract more revenue.
 
-To ensure compatibility on many platforms, such as Win32, iOS, and Android, BianFeng wisely adopted Unity, a popular cross-platform game engine. But they realized that the Unity version would be a big issue when they decided to publish the game to the Windows Store. The Unity 4.*x* engine used by Wuxia doesn't support Windows 10; BianFeng had to upgrade the engine to Unity 5.2 or later if they couldn't find another solution. Upgrading Unity across major versions means a heavy workload, which may include rewriting [shaders](https://docs.unity3d.com/Manual/UpgradeGuide5-Shaders.html), replacing game [physics](https://docs.unity3d.com/Manual/UpgradeGuide5-Physics.html), upgrading [animation](https://docs.unity3d.com/Manual/UpgradeGuide5-Animation.html), fixing [plugins](https://docs.unity3d.com/Manual/UpgradeGuide5-Plugins.html), and so on. BianFeng estimated that this job would cost a senior engineer more than 30 days.
+To ensure compatibility on many platforms, such as Win32, iOS, and Android, BianFeng wisely adopted Unity, a popular cross-platform game engine. But they realized that the Unity version would be a big issue when they decided to publish the game to the Windows Store. The Unity 4.*x* engine used by Wuxia doesn't support Windows 10; BianFeng had to upgrade the engine to Unity 5.2 or later if they couldn't find another solution. Upgrading Unity across major versions means a heavy workload, which might include rewriting [shaders](https://docs.unity3d.com/Manual/UpgradeGuide5-Shaders.html), replacing game [physics](https://docs.unity3d.com/Manual/UpgradeGuide5-Physics.html), upgrading [animation](https://docs.unity3d.com/Manual/UpgradeGuide5-Animation.html), fixing [plugins](https://docs.unity3d.com/Manual/UpgradeGuide5-Plugins.html), and so on. BianFeng estimated that this job would cost a senior engineer more than 30 days.
 
 Using the Desktop Bridge not only helped BianFeng migrate smoothly but also saved a great deal of time and money.
 
@@ -56,7 +56,7 @@ With the Desktop Bridge, the team migrated Wuxia to UWP in short time. They also
 
 1. Download the [Desktop App Converter](https://aka.ms/converter) tool from the Windows Store.
 2. Download the [Desktop App Converter base images](https://www.microsoft.com/en-us/download/details.aspx?id=54852) (\*.wim).
-3. Run Desktop App Converter as admininstrator.
+3. Run Desktop App Converter as administrator.
 4. From the tool console window, run `Set-ExecutionPolicy bypass`.
 5. Set up the converter by running `DesktopAppConverter.exe -Setup -BaseImage .\BaseImage-14393.wim -Verbose`.
 6. Reboot.
@@ -68,7 +68,7 @@ The base image file should be matched with the build of Windows 10 on the host c
 1. Copy all the game files to a separate directory.
 2. From the tool console window, create the Windows 10 app package by running the following command:
 
-   ```batch
+   ```shell
    DesktopAppConverter.exe -Installer E:\XiaKeExe -Destination E:\Output -PackageName "76C7AEE9.17933E72A5ED1" -Publisher "CN=B19F025D-990F-467C-B5C2-E5F402A0BDFA" -Version 1.0.0.0 -appid "XiaKe" -makeappx -AppExecutable game.exe -packagearch x86
    ```
 
@@ -91,9 +91,9 @@ We couldn't call UWP APIs in the Unity project for the following reasons:
 - The .NET version of the Win32 platform in Unity is only 2.0.
 - Because no other project will be created when the game is built targeting Win32 in Unity Editor, we can't retarget the app to .NET 4.6.1.
 
-*Unity build settings*
+  *Unity build settings*
 
-<img alt="Unity build settings" src="{{ site.baseurl }}/images/BianFeng/Unity.jpg" width="651">
+  <img alt="Unity build settings" src="{{ site.baseurl }}/images/BianFeng/Unity.jpg" width="651">
 
 **Solution**
 
@@ -178,34 +178,34 @@ The team used UWPWrappers, a C++ open-source project comprising runtime componen
 1. In the app manifest, update DisplayName, PublisherDisplayName, and Description by hand.
 2. From the command window, create the AppX package manually by running the following:
 
-   ```batch
+   ```shell
    cd "C:\Program Files (x86)\Windows Kits\10\bin\x86"
    .\makeappx.exe pack /d "E:\Output\76C7AEE9.17933E72A5ED1\PackageFiles" /p "E:\Output\76C7AEE9.17933E72A5ED1\XiaKe.appx" /l
    ```
 
 3. Create a certificate using MakeCert.exe:
 
-   ```batch
+   ```shell
    .\MakeCert.exe -r -h 0 -n "CN=B19F025D-990F-467C-B5C2-E5F402A0BDFA" -eku 1.3.6.1.5.5.7.3.3 -pe -sv E:\cert\my.pvk E:\cert\my.cer 
    ```
 
 4. Copy public and private key information into the certificate:
 
-   ```batch
+   ```shell
    .\pvk2pfx.exe -pvk E:\cert\my.pvk -spc E:\cert\my.cer -pfx E:\cert\my.pfx
    ```
 
 5. Sign the app package with the certificate:
 
-   ```batch
+   ```shell
    .\signtool.exe sign -f E:\cert\my.pfx -fd SHA256 -v E:\Output\76C7AEE9.17933E72A5ED1\XiaKe.appx
    ```
 
 ### Video demo ###
 
-<iframe src="https://youtu.be/Qz6x_60unpA" width="960" height="540" allowFullScreen frameBorder="0"></iframe>
+<iframe src="https://www.youtube.com/embed/Qz6x_60unpA" width="960" height="540" allowFullScreen frameBorder="0"></iframe>
 
-### Photos from hackfest ###
+### Photos from the hackfest ###
 
 *A meeting during the hackfest*
 
@@ -231,17 +231,17 @@ Microsoft has some upcoming chances to work with the BianFeng team:
 After the hackfest, Ke Pan, Vice President of BianFeng, said
 
 > "The Desktop Bridge is a set of technologies that enables developers to convert their Windows desktop application (for example, Win32, Windows Forms, or WPF) or game into a UWP app or game.
-
+>
 > "With this technology, we can migrate our Win32 games to UWP, which reaches every Windows 10 PC and tablet immediately. We can proudly guarantee the user a wonderful experience installing and updating our games with the deployment we've done. 
-
+>
 > "Distributing through the Windows Store gets us increased reach to millions of Windows 10 users, who can acquire apps and games and make in-app purchases with local payment options. We also can add UWP features to the packages of our games, such as Live Tile updates, to keep retention high.
-
+>
 > "We really appreciate the support from the Microsoft DX team, who helped us solve all the major issues while converting our game. We can now easily generate UWP games and integrate UWP APIs."
 
 Generally, a gaming app is entirely different from a normal app because of the higher demands for graphics rendering and more-complicated logic processes, which leads to more jobs to meet compatibility requirements. This case study shows that Desktop Bridge is completely applicable for Win32 games. The customer can enjoy a quick and smooth migration experence with Desktop Bridge. The time we spent was only two days. In some cases, using Desktop Bridge is even more convenient than using a cross-platform game engine, such as when
 
-- The target platforms of the engine includes Win32 but doesn't include Windows 10 UWP
-- The engine upgrade for Windows 10 is very troublesome, such as Unity4.*x*
+- The target platforms of the engine includes Win32 but doesn't include Windows 10 UWP.
+- The engine upgrade for Windows 10 is very troublesome, such as Unity4.*x*.
 
 And publishing to the Windows Store makes the client safer: Strict check mechanisms and integrated UWP APIs benefit both gameplay and monetization. Let's look forward to more UWP games in the future.
 
