--- a/_posts/2017-03-14-Bianfeng.md
+++ b/_posts/2017-03-14-Bianfeng.md
@@ -36,7 +36,7 @@ Core team:
 
 ## Customer profile ##
 
-Established in 1999， [BianFeng](http://www.bianfeng.com/) came from two leading card-game companies in China: GameABC and GameTea. In 2013, it was acquired by Zhejiang Daily Media Group for ¥3.2 billion. From then on, BianFeng began to expend its business, which covers not only card games but also online chess and E-sports platforms, board games, web games, wireless terminals, and other interactive entertainment content and services. BianFeng won the title of "Top 10 China brand game enterprise" at the 2016 China Game Industry Annual Conference with revenue of more than ¥400 million from more than 10 million monthly active users (MAU).
+Established in 1999, [BianFeng](http://www.bianfeng.com/) came from two leading card-game companies in China: GameABC and GameTea. In 2013, it was acquired by Zhejiang Daily Media Group for ¥3.2 billion. From then on, BianFeng began to expend its business, which covers not only card games but also online chess and E-sports platforms, board games, web games, wireless terminals, and other interactive entertainment content and services. BianFeng won the title of "Top 10 China brand game enterprise" at the 2016 China Game Industry Annual Conference with revenue of more than ¥400 million from more than 10 million monthly active users (MAU).
 
 Tales of Wuxia is a client offline game that comes from a famous series and combines role cultivation and RPG-style play. It tells the story of an ambitious young man who travels from afar to Luoyang to show admiration and respect for Master Shrimp. The Win32 version has been available on Steam ([侠客风云传 Tale of Wuxia](http://store.steampowered.com/app/377530/)) for 10 months with more than 40,000 downloads. BianFeng plans a large website promotion for the Windows 10 version.
 
@@ -68,7 +68,7 @@ The base image file should be matched with the build of Windows 10 on the host c
 1. Copy all the game files to a separate directory.
 2. From the tool console window, create the Windows 10 app package by running the following command:
 
-   ```shell
+   ```batch
    DesktopAppConverter.exe -Installer E:\XiaKeExe -Destination E:\Output -PackageName "76C7AEE9.17933E72A5ED1" -Publisher "CN=B19F025D-990F-467C-B5C2-E5F402A0BDFA" -Version 1.0.0.0 -appid "XiaKe" -makeappx -AppExecutable game.exe -packagearch x86
    ```
 
@@ -178,26 +178,26 @@ The team used UWPWrappers, a C++ open-source project comprising runtime componen
 1. In the app manifest, update DisplayName, PublisherDisplayName, and Description by hand.
 2. From the command window, create the AppX package manually by running the following:
 
-   ```shell
+   ```batch
    cd "C:\Program Files (x86)\Windows Kits\10\bin\x86"
    .\makeappx.exe pack /d "E:\Output\76C7AEE9.17933E72A5ED1\PackageFiles" /p "E:\Output\76C7AEE9.17933E72A5ED1\XiaKe.appx" /l
    ```
 
 3. Create a certificate using MakeCert.exe:
 
-   ```shell
+   ```batch
    .\MakeCert.exe -r -h 0 -n "CN=B19F025D-990F-467C-B5C2-E5F402A0BDFA" -eku 1.3.6.1.5.5.7.3.3 -pe -sv E:\cert\my.pvk E:\cert\my.cer 
    ```
 
 4. Copy public and private key information into the certificate:
 
-   ```shell
+   ```batch
    .\pvk2pfx.exe -pvk E:\cert\my.pvk -spc E:\cert\my.cer -pfx E:\cert\my.pfx
    ```
 
 5. Sign the app package with the certificate:
 
-   ```shell
+   ```batch
    .\signtool.exe sign -f E:\cert\my.pfx -fd SHA256 -v E:\Output\76C7AEE9.17933E72A5ED1\XiaKe.appx
    ```
 
