--- a/_posts/2017-03-14-Bianfeng.md
+++ b/_posts/2017-03-14-Bianfeng.md
@@ -203,7 +203,7 @@ The team used UWPWrappers, a C++ open-source project comprising runtime componen
 
 ### Video demo ###
 
-<iframe src="https://www.youtube.com/embed/Qz6x_60unpA" width="960" height="540" allowFullScreen frameBorder="0"></iframe>
+<iframe src="https://www.youtube.com/embed/fzOHxX_6ST4" width="960" height="540" allowFullScreen frameBorder="0"></iframe>
 
 ### Photos from the hackfest ###
 
@@ -247,5 +247,6 @@ And publishing to the Windows Store makes the client safer: Strict check mechani
 
 ## Additional resources ##
 
+- "Tale of Wuxia" in the Windows Store: [侠客风云传](https://www.microsoft.com/store/apps/9n7vwvm28wjm)
 - Desktop Bridge samples on GitHub: [Microsoft/DesktopBridgeToUWP-Samples](https://github.com/Microsoft/DesktopBridgeToUWP-Samples)
 - News coverage of 2016 China Game Industry Annual Conference: [中国游戏产业年会十强大奖花落谁家](http://games.qq.com/a/20161216/015731.htm)
