--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -12,9 +12,12 @@ language: English
 verticals: [Smart Cities, Environmental, Power]
 ---
 
-# Powel Bot Hack Report March 2017
+# Meet André, the voice-driven assistant Bot!
 
-From the 15-17th of March 2017 at Microsoft offices in Lysaker - Norway, Microsoft teamed up with Powel to create a brand-new bot called **André**. The aim of the hackfest was to create a chatbot that could assist field engineers within the space of electrical grids to answer questions and provide valuable information about the current scenario at hand. The solution was built using tools from Microsoft leveraging Chatbots and Conversation as a Platform (CaaP) technologies.
+From the 15-17th of March 2017 at Microsoft offices in Lysaker - Norway, Microsoft teamed up with Powel to create a brand-new bot called **André**. 
+The aim of the hackfest was to create a voice-driven chatbot that could assist field engineers within the space of electrical grids to answer questions and 
+provide reporting capabilities during inspections in order to free up their hands. 
+The solution was built using tools from Microsoft leveraging Chatbots and Conversation as a Platform (CaaP) technologies.
 
 ![Field engineer](../images/Powel/CaaP/fieldengineer.jpg)
 
