Add explanation on how to set up your development environment

--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -152,13 +152,30 @@ Microsoft Bot Framework Bot Builder SDK (C#), FormFlow, LUIS, Multi-channel inte
 
 ## Technical delivery
 
+### Setting up the development environment
+In order to get started with the project we had to:
+
+**Visual Studio**
+- Install [Visual Studio 2017](https://www.visualstudio.com/) (Visual Studio 2015 also works)
+  - Ensure Xamarin is included in your Visual Studio installation for developing the **André** app
+- Download and install the [Bot Framework Emulator](https://docs.botframework.com/en-us/downloads/)
+- Download and install the [Visual Studio Bot Template for C#](https://docs.botframework.com/en-us/downloads/)
+
+**Set up LUIS**<br />
+In order to use the *Language Understanding Intelligent Service* (LUIS), head over to [it's homepage](https://www.luis.ai/home/index) and create an account. 
+You can try it out free of charge for a generous number of messages per day.  
+
+You now have everything you need to create a Bot application. For a complete reference on getting started with Microsoft Bot Builder, [look here](https://docs.botframework.com/en-us/csharp/builder/sdkreference/). 
+
 ### Achievements Day 1
 
 The following was worked on during day 1 of the hackfest:
 
-For Xamarin forms, we managed to initiate native services which made the mobile app listen and speak through the Google speech recognition interface. We also started to work on the chat components for the app.
+**André** is a Xamarin Forms application, and for that, we needed to implement native services to have the mobile app listen and speak through the Google speech recognition interface. 
+We also started to work on the chat components for the app.
 
-With LUIS, we had 10 intents described and trained with utterances. We started writing imaginary dialogs between a user and the app to get a better understanding of how the conversation would flow. We also started to experiment with LUIS entities and having intents recognize and use these entities.
+With LUIS, we had 10 intents described and trained with utterances. 
+We started writing imaginary dialogs between a user and the app to get a better understanding of how the conversation would flow. We also started to experiment with LUIS entities and having intents recognize and use these entities.
 
 For the Microsoft Bot Framework, we created a bot application in the dev.framework.com space, and also created a Web API Bot framework site in Azure. We then connected these two together.
 We set up Continuous Integration (CI) in VSTS where the bot would build and deploy to Azure on every commit. We then proceeded to add LUIS integration to start working with the intents. At this stage, we had two intents implemented.
