Add instructions for how to deploy the Bot onto an Azure App Service

--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -177,8 +177,21 @@ We also started to work on the chat components for the app.
 With LUIS, we had 10 intents described and trained with utterances. 
 We started writing imaginary dialogs between a user and the app to get a better understanding of how the conversation would flow. We also started to experiment with LUIS entities and having intents recognize and use these entities.
 
-For the Microsoft Bot Framework, we created a bot application in the dev.framework.com space, and also created a Web API Bot framework site in Azure. We then connected these two together.
-We set up Continuous Integration (CI) in VSTS where the bot would build and deploy to Azure on every commit. We then proceeded to add LUIS integration to start working with the intents. At this stage, we had two intents implemented.
+For the Microsoft Bot Framework, we created a bot application in the dev.framework.com space, and also created a Web API Bot framework site in Azure. 
+
+**Setting up the Bot in Azure**<br />
+The Bot framework essencially operates like any ASP.Net App Service. It has a controller that handles the conversation messages, so in essence, all you need to do is: 
+
+- Create/Register a new Bot Application on the [Bot Framework developer site](https://dev.botframework.com/). This will give you a Bot Handle (Guid) and an app secret for your bot
+  - Take a note of the Microsoft Application Id and Application Password in the same portal
+- Deploy the Bot code to a new Azure App Service
+- Configure your settings to include the Microsoft AppId and Password so that you can connect the WebApi to the Bot framework
+
+We opted to used the *CloudConfigurationManager* to read the settings directly from the App Service. 
+
+We set up Continuous Integration (CI) in VSTS where the bot would build and deploy to Azure on every commit. 
+We then proceeded to add LUIS integration to start working with the intents. 
+At this stage, we had two intents implemented.
 
 The team working hard:
 
