Explain why we went for HTTP over WebSockets

--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -202,6 +202,7 @@ The team working hard:
 The following was worked on during day 2 of the hackfest:
 
 We finalized the Direct Connection through the use of [Web Sockets](https://github.com/NVentimiglia/WebSockets.Pcl) but ended up going for HTTP instead as we could not make the Portable Class Library work.
+This was largely to do with getting WebSockets to work on Android, we weren't sure at this stage if we had a quick fix, so we opted out in the interest of time, and focusing our efforts on getting everything to work. 
 
 We successfully connected the Bot application to the Powel backend (application called Condition Monitoring) through the use of API's.
 
