Explain how we connected to the backend API through Powel NuGet packages

--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -204,7 +204,16 @@ The following was worked on during day 2 of the hackfest:
 We finalized the Direct Connection through the use of [Web Sockets](https://github.com/NVentimiglia/WebSockets.Pcl) but ended up going for HTTP instead as we could not make the Portable Class Library work.
 This was largely to do with getting WebSockets to work on Android, we weren't sure at this stage if we had a quick fix, so we opted out in the interest of time, and focusing our efforts on getting everything to work. 
 
-We successfully connected the Bot application to the Powel backend (application called Condition Monitoring) through the use of API's.
+We successfully connected the Bot application to the Powel backend (application called Condition Monitoring) through the use of API's. 
+
+<dl>
+	<dt>A note about the backend API's</dt>
+	<dd>
+	We connected the backend API's of Powel through some NuGet packages internal to Powel, and called the methods on the objects within. 
+	Accessing these NuGet packages through VSTS for CI was a breeze. Due to the sensitivity of the code, we cannot share code example specific to that, but in essence, 
+	we used the APIs to get installation ID's by GPS location (lon/lat), and for submitting the report data.
+	</dd>
+</dl>
 
 We connected the mobile app to the bot and made it work. We also spent some time designing the Xamarin Forms app and making sure that the interface/user experience was good.
 
