Add code example on how to fix CamelCasing in JsonSerializerSettings

--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -227,8 +227,19 @@ We spent a lot of time on the PromptDialogs as we forgot to set the dialog imple
 
 Other pain points we experienced:
 
-- Some issues with the .net Framework version
-- WebApiConfig from the bot template made all parameter names in JSON; Camel cased. This was not accepted by the internal Powel API, which in return took some time to figure out.
+- Some issues with the .net Framework version not matching the Bot Framework
+- WebApiConfig from the bot template made all parameter names in JSON camel-cased. This was not accepted by the internal Powel API, which in return took some time to figure out. 
+The configuration initially looked like this:
+
+```c#
+JsonConvert.DefaultSettings = () => new JsonSerializerSettings()
+ {
+     ContractResolver = new CamelCasePropertyNamesContractResolver(),
+     Formatting = Newtonsoft.Json.Formatting.Indented,
+     NullValueHandling = NullValueHandling.Ignore,
+}; 
+```
+We simply removed the ContractResolver line and that seemed to fix the issue. 
 
 We ended the day by testing the bot outside to see how it handled background noise and whether it would be able to capture the intent of the field engineer. The location chosen was a noisy environment (highway) that could very much be an actual inspection site where a field engineer would have to inspect an overhead line or a power mast for instance.  The testing succeeded with positive results:
 
