Rewrite the conclusion to be more developer oriented

--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -25,9 +25,7 @@ In this CaaP hackfest, we describe the process and results, including the follow
 
 - [Microsoft Bot Framework](https://dev.botframework.com/)
 - [Microsoft Cognitive Services](https://www.microsoft.com/cognitive-services)
-  - [Language Understanding Intelligent Services (LUIS)](https://www.luis.ai/)
-  - [Translation API](https://www.microsoft.com/cognitive-services/en-us/translator-api)
-  - [Bing Spell Check API](https://www.microsoft.com/cognitive-services/en-us/bing-spell-check-api)
+  - [Language Understanding Intelligent Services (LUIS)](https://www.luis.ai/)    
 - [Xamarin Forms](https://www.xamarin.com/forms)
 - Text-to-speech
   - [Bing Speech API](https://www.microsoft.com/cognitive-services/en-us/speech-api)
@@ -138,7 +136,7 @@ The following was achieved by the end of the hackfest:
 The following was not implemented, but scoped for during the hackfest:
 
 - Power line inspection
-- Translation of text from Norwegian to English
+- Translation of text from Norwegian to English 
 - Upload image from mobile app
 - Triggering of conversation through voice without the use of a button
 
@@ -247,7 +245,7 @@ We ended the day by testing the bot outside to see how it handled background noi
 
 ### Achievements Day 3
 
-The final part of the hackfest was used on setting up build automation for the Xamarin Forms project, as well as finding possibilities for making a conversation that flows through different Dialogs.
+The final part of the hackfest was used on setting up build automation for the Xamarin Forms project using [Visual Studio Mobile Center](https://mobile.azure.com/login), as well as finding possibilities for making a conversation that flows through different Dialogs.
 
 The following is the final flow of the PoC chatbot (sadly, we did not manage to implement text translation because of time constraints, but have included the part in the flow image below):
 
@@ -472,9 +470,21 @@ The following gif shows the client mobile app on the left developed in Xamarin F
 
 ## Conclusion
 
-The 3-day hackfest in collaboration with Powel was an intensive effort to create a solution on top of the newest technologies that could increase efficiency and add value for the field engineers assessing the electrical power grid in Norway. The hackfest situated in Microsoft offices in Norway yielded much excitement not only within the DX Team but also throughout other segments in the subsidiary.
+The 3-day hackfest in collaboration with Powel was an intensive effort to create a solution on top of the newest technologies to increase efficiency 
+and add value for electrical field engineers. 
 
-The concept of having all the information within the Powel backend accessible through natural speech within an app, not only increases the efficiency of the field engineer but also empowers the engineer to make better decisions based on knowledge he can now extract through the app. Being able to register discrepancies on-the-fly, allows the engineers to stay paperless while conducting inspections so that he does not have to return to the office to digitalize the findings afterward. This feature itself decreases the potential loss of information that might occur when the engineer is in transit from finishing the inspection, to actually digitalizing the findings.
+From a developer standpoint, all the necessary parts are there, and integrating them to create a solution felt allmost too easy! 
+The bumps that we encountered were not directly related to the bot framework itself, but more specific to Xamarin-related challenges.
+
+The guidance provided on the Bot Framework and LUIS have the potential to improve, but it is sufficient to get you started, and once you've got the hang of it, 
+you will spend the majority of your time designing conversational flows, and less time on code.
+
+Having all the information within the Powel backend accessible through natural speech within an app empowers the engineer to make 
+decisions based on knowledge they can simply ask for through the app, leading to more accurate inspection reports. 
+
+Being able to register discrepancies on-the-fly, ask for inspection details and other related information allows the engineer to stay paperless *during* inspections 
+so that they are less likely to forget an inspection point, and don't have the extra overhead of having to return to the office to digitalize the findings after the fact. 
+
 
 ### General lessons
 
