Add intent of going forward and links to Bot Framework and LUIS

--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -470,6 +470,8 @@ The following gif shows the client mobile app on the left developed in Xamarin F
 
 ## Conclusion
 
+The results of the hackfest were brilliant and it is mesmerizing to think that the developers from Powel went from knowing nothing about the Microsoft Bot Framework to actually successfully build an integrated chatbot that could converse conversations across multiple systems and provide much-needed insight for the field engineers. Powel is dedicated to continuing the development of the chatbot the next few months to extend the current capabilities of the chatbot to include analytics and historical view of specific parts before going live, but to also extend the concept to other areas and application domains of Powel than just the power business segment.
+
 The 3-day hackfest in collaboration with Powel was an intensive effort to create a solution on top of the newest technologies to increase efficiency 
 and add value for electrical field engineers. 
 
@@ -485,8 +487,10 @@ decisions based on knowledge they can simply ask for through the app, leading to
 Being able to register discrepancies on-the-fly, ask for inspection details and other related information allows the engineer to stay paperless *during* inspections 
 so that they are less likely to forget an inspection point, and don't have the extra overhead of having to return to the office to digitalize the findings after the fact. 
 
+The cool part about this hackfest is that we managed to build something that actually works and could be put into production in no time. With LUIS and the Microsoft Bot Framework, we are now able to give the field worker the support he needs when he needs it and without the use of hands. This is a totally new user experience, heavily influenced by Microsoft, an experience we can bring into our customer conversations across the domains within Powel_. Øystein Askeland, Interaction Designer (Powel)
+Overall, the hackfest turned out to be a success for all parties involved and many valuable lessons were learned.
 
-### General lessons
+### Lessons learned
 
 Learning were done throughout the whole hackfest, not only for Powel but also for the DX Team in Microsoft. The learnings included:
 
@@ -500,24 +504,31 @@ Learning were done throughout the whole hackfest, not only for Powel but also fo
 - How to write good commit messages
 - Productivity tips (including shortcuts and unknown features in Visual Studio 2017)
 
+This is something that Powel will continue to integrate into the next development phase of the chatbot.
+
+
+### Going forward
 It turned out that we did not manage to include all the features that we scoped for during the 3-day hackfest. The scoped features that were left out was:
 
 - Text translation
 - Upload image from client app
 - Triggering of "André" for voice activation based on natural voice instead of a button
+- Figuring out the WebSockets and fixing it
 
-This is something that Powel will continue to integrate into the next development phase of the chatbot.
+Powel intends to iron out these issues shortly after the hackfest to produce a working prototype to be tested in the field as soon as possible. 
 
-### Going forward
 
-The results of the hackfest were brilliant and it is mesmerizing to think that the developers from Powel went from knowing nothing about the Microsoft Bot Framework to actually successfully build an integrated chatbot that could converse conversations across multiple systems and provide much-needed insight for the field engineers. Powel is dedicated to continuing the development of the chatbot the next few months to extend the current capabilities of the chatbot to include analytics and historical view of specific parts before going live, but to also extend the concept to other areas and application domains of Powel than just the power business segment.
 
-_The cool part about this hackfest is that we managed to build something that actually works and could be put into production in no time. With LUIS and the Microsoft Bot Framework, we are now able to give the field worker the support he needs when he needs it and without the use of hands. This is a totally new user experience, heavily influenced by Microsoft, an experience we can bring into our customer conversations across the domains within Powel_. Øystein Askeland, Interaction Designer (Powel)
-
-Overall, the hackfest turned out to be a success for all parties involved and many valuable lessons were learned.
 
 ## Additional resources
 
-All source code for the hackfest can be found in the following GitHub repository:
 
+Want to try out Bot Framework right now? Start here: 
+[Microsoft Bot Framework](https://dev.botframework.com/)
+
+Want to try out LUIS and other cognitive services from Microsoft? 
+[Microsoft Cognitive Services](https://www.microsoft.com/cognitive-services)
+
+Source code from hackfest can be found here:
 [Link to GitHub repository](https://github.com/readyforchaos/Powel-power-station-inspection-bot)
+
