Highlight customer quote in conclusion

--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -472,9 +472,6 @@ The following gif shows the client mobile app on the left developed in Xamarin F
 
 The results of the hackfest were brilliant and it is mesmerizing to think that the developers from Powel went from knowing nothing about the Microsoft Bot Framework to actually successfully build an integrated chatbot that could converse conversations across multiple systems and provide much-needed insight for the field engineers. Powel is dedicated to continuing the development of the chatbot the next few months to extend the current capabilities of the chatbot to include analytics and historical view of specific parts before going live, but to also extend the concept to other areas and application domains of Powel than just the power business segment.
 
-The 3-day hackfest in collaboration with Powel was an intensive effort to create a solution on top of the newest technologies to increase efficiency 
-and add value for electrical field engineers. 
-
 From a developer standpoint, all the necessary parts are there, and integrating them to create a solution felt allmost too easy! 
 The bumps that we encountered were not directly related to the bot framework itself, but more specific to Xamarin-related challenges.
 
@@ -487,7 +484,14 @@ decisions based on knowledge they can simply ask for through the app, leading to
 Being able to register discrepancies on-the-fly, ask for inspection details and other related information allows the engineer to stay paperless *during* inspections 
 so that they are less likely to forget an inspection point, and don't have the extra overhead of having to return to the office to digitalize the findings after the fact. 
 
-The cool part about this hackfest is that we managed to build something that actually works and could be put into production in no time. With LUIS and the Microsoft Bot Framework, we are now able to give the field worker the support he needs when he needs it and without the use of hands. This is a totally new user experience, heavily influenced by Microsoft, an experience we can bring into our customer conversations across the domains within Powel_. Øystein Askeland, Interaction Designer (Powel)
+The cool part about this hackfest is that we managed to build something that actually works and could be put into production in no time. 
+With LUIS and the Microsoft Bot Framework, we are now able to give the field worker the support he needs when he needs it and without the use of hands. 
+
+>"This is a totally new user experience, heavily influenced by Microsoft, an experience we can bring into our customer conversations across the domains within Powel."
+>
+>**Øystein Askeland**, <br />
+>*Interaction Designer, Powel*
+
 Overall, the hackfest turned out to be a success for all parties involved and many valuable lessons were learned.
 
 ### Lessons learned
