Add link to deployment procedure in the bot framework website

--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -110,10 +110,16 @@ In summary, the chatbot will:
 
 ## Solution and steps
 
-The whole hackfest was initiated by Pedro who introduced the team to the Microsoft Bot Framework, showing examples of a working bot, explaining features and making sure that the whole team was up to speed before we started developing. The goal of the three-day hackfest was to create a client app in Xamarin Forms for Android that could visualize the conversation that the engineer would be having using the Microsoft Bot Framework with LUIS and the cognitive services. We created a User Story in Visual Studio Team Services (VSTS) that consisted of multiple tasks. The User Story was as following:
-_As a field worker, I want to be able to submit inspections that are OK to a bot so that I don't have to fill out a form for that_
+The whole hackfest was initiated by Pedro who introduced the team to the Microsoft Bot Framework, showing examples of a working bot, explaining features 
+and making sure that the whole team was up to speed before we started developing. 
+The goal of the three-day hackfest was to create a client app in Xamarin Forms for Android that could visualize the conversation that 
+the engineer would be having using the Microsoft Bot Framework using LUIS and the cognitive services. 
+We created a User Story in Visual Studio Team Services (VSTS) that consisted of multiple tasks. 
 
-We also defined Features and Tasks to make it easier to distribute work across the team. We created two repositories (one for the ASP.NET bot application, the second one for the Xamarin Forms application). We also configured Continuous Integration on the Bot Framework, so that it builds and deploys to Microsoft Azure after each commit.
+The User Story was as following: <br />
+**As a field worker, I want to be able to submit inspections that are OK to a bot so that I don't have to fill out a form for that**
+
+We defined Features and Tasks to make it easier to distribute work across the team. We created two repositories (one for the ASP.NET bot application, the second one for the Xamarin Forms application). We also configured Continuous Integration on the Bot Framework, so that it builds and deploys to Microsoft Azure after each commit.
 
 Below is a picture of the Kanban board:
 
@@ -183,7 +189,9 @@ The Bot framework essencially operates like any ASP.Net App Service. It has a co
 - Create/Register a new Bot Application on the [Bot Framework developer site](https://dev.botframework.com/). This will give you a Bot Handle (Guid) and an app secret for your bot
   - Take a note of the Microsoft Application Id and Application Password in the same portal
 - Deploy the Bot code to a new Azure App Service
-- Configure your settings to include the Microsoft AppId and Password so that you can connect the WebApi to the Bot framework
+- Configure your settings to include the Microsoft AppId and Password so that you can connect the WebApi to the Bot framework. 
+
+You can find a [complete reference to this process here](https://docs.botframework.com/en-us/node/builder/guides/deploying-to-azure/)
 
 We opted to used the *CloudConfigurationManager* to read the settings directly from the App Service. 
 
