Replace hand-drawn sketch with Storyboarding sketch from Powerpoint

--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -223,9 +223,10 @@ We successfully connected the Bot application to the Powel backend (application 
 
 We connected the mobile app to the bot and made it work. We also spent some time designing the Xamarin Forms app and making sure that the interface/user experience was good.
 
-Below is a low-fidelity sketch of the interface:
+Below is a rough initial sketch of the design interface, made using the [Powerpoint storyboard functionality](https://msdn.microsoft.com/en-us/library/hh409276(vs.110).aspx):
 
-![Low fidelity sketch](../images/Powel/CaaP/lowfidelity.jpg)
+![Low fidelity sketch](../images/Powel/CaaP/design-sketches.jpg)
+
 
 We further worked on getting NuGet Packages from Powels core API's (Condition Monitoring API) to be included in the build for the bot. We worked on some dialog flows plans for later implementation, and spent some more time on working with the intents and training LUIS to recognize them.
 
