Add link to steps for connecting the bot to different channels

--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -390,8 +390,11 @@ As we have seen, dialogs work as a powerful mechanism to guide a conversation, b
 
 ### Connector
 
-The Bot Framework Connector service is a component which provides a single API for the bot to communicate across multiple client services such as Skype, Email, Slack. Since we were already using Slack for communication throughout the hackfest, we decided to set up the integration with Slack in order to be able to talk to the bot in an efficient way.
+The Bot Framework Connector service is a component which provides a single API for the bot to communicate across multiple client services such as Skype, Email, Slack. 
+Since we were already using Slack for communication throughout the hackfest, we decided to set up the integration with Slack in order to be able to talk to the bot in an efficient way.
+[Click here to read about the steps for configuring bot channels.](https://docs.botframework.com/en-us/csharp/builder/sdkreference/gettingstarted.html#channels)
 
+Below, you can see how testing the conversation using Slack looks like
 ![Skack connector](../images/Powel/CaaP/slack.png)
 
 We managed to set up the slack integration by registering the bot in the dev.botframework space and choosing the connector type without the need of any coding.
